--- a/auth/package.json
+++ b/auth/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.1.0",
+    "mongoose": "^8.5.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96"
   }
 }
