--- a/auth/package.json
+++ b/auth/package.json
@@ -25,13 +25,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "@types/express": "^4.17.21",
+    "@types/cookie-session": "^2.0.49",
+    "@types/jsonwebtoken": "^9.0.6"
   },
   "devDependencies": {
-    "@types/cookie-session": "^2.0.49",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.96",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
