--- a/auth/package.json
+++ b/auth/package.json
@@ -18,6 +18,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@avzticketing/common": "^1.0.5",
+    "@types/cookie-session": "^2.0.49",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "cookie-session": "^2.1.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -25,10 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.2",
-    "@types/express": "^4.17.21",
-    "@types/cookie-session": "^2.0.49",
-    "@types/jsonwebtoken": "^9.0.6"
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
