--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,42 +1,43 @@
-apiVersion: skaffold/v2alpha3
+apiVersion: skaffold/v4beta11
 kind: Config
-deploy:
-  kubectl:
-    manifests:
-      - ./infra/k8s/*
 build:
-  local:
-    push: false
   artifacts:
     - image: avivzo9/auth
       context: auth
-      docker:
-        dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**/*.ts"
+          - src: src/**/*.ts
             dest: .
-    - image: avivzo9/client
-      context: client
       docker:
         dockerfile: Dockerfile
+    - image: avivzo9/client
+      context: client
       sync:
         manual:
           - src: "**/*.js"
             dest: .
+      docker:
+        dockerfile: Dockerfile
     - image: avivzo9/tickets
       context: tickets
-      docker:
-        dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**/*.ts"
+          - src: src/**/*.ts
             dest: .
+      docker:
+        dockerfile: Dockerfile
     - image: avivzo9/orders
       context: orders
-      docker:
-        dockerfile: Dockerfile
       sync:
         manual:
-          - src: "src/**/*.ts"
+          - src: src/**/*.ts
             dest: .
+      docker:
+        dockerfile: Dockerfile
+  local:
+    push: false
+manifests:
+  rawYaml:
+    - ./infra/k8s/*
+deploy:
+  kubectl: {}
