--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ tickets/node_modules
 client/node_modules
 orders/node_modules
 expiration/node_modules
+payments/node_modules
 
 # client
 client/.next
