update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 # node_modules
-auth/node_modules
-tickets/node_modules
-client/node_modules
-orders/node_modules
-expiration/node_modules
-payments/node_modules
+node_modules
 
 # client
 client/.next
