--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,5 +7,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/chckout@v2
+      - uses: actions/checkout@v2
       - run: cd auth && npm i && npm run test:ci
