--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,10 @@
 name: Tests
 
-on:
-  pull_request
+on: pull_request
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/chckout@v2
+      - uses: actions/checkout@v2
       - run: cd auth && npm i && npm run test:ci
